[package]
name = "flua"
version = "0.2.1"
edition = "2024"

[dependencies]
mlua = { version = "0.11.4", features = [
    "luajit",
    "vendored",
    "serde",
    "async",
] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
zip = "0.6"
walkdir = "2"
sys-info = "0.9.1"
open = "3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
dirs-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dotenv = "0.15"
serde_yaml = "0.9"
ini = "1.3"
base64 = "0.21"
xmltree = "0.11.0"
either = "1.8"
some_default_dirs = "0.1.0"
json5 = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "wincon"] }
windows = { version = "0.62.1", features = ["Win32_System_Console"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3"
assert_fs = "1.0"
predicates = "3.1.3"
httptest = "0.16.3"
