# cargo run -p flua

[workspace]
members = ["crates/flua", "crates/fluaoslib", "crates/flualogger"]
resolver = "3"

[workspace.dependencies]
fluaoslib = { path = "crates/fluaoslib" }
flualogger = { path = "crates/flualogger" }

[profile.dev]
opt-level = 0 # fastest build, slowest runtime
lto = false   # "thin" works, but slows compile
strip = false

[profile.release]
opt-level = 3     # 0 -> no optimizing, 3 -> max speed
lto = "fat"       # oder "thin" für schnelleren Build
codegen-units = 1 # bessere Optimierung, aber langsamerer Compile
panic = "abort"   # spart etwas Platz, leicht schneller
strip = true      # entfernt Debug-Symbole (optional)
